Updating project file to include version in INF when building.

--- a/driver/synccom.vcxproj
+++ b/driver/synccom.vcxproj
@@ -546,7 +546,7 @@
     </ClCompile>
     <Inf>
       <CatalogFileName>synccom.cat</CatalogFileName>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|x64'">
@@ -556,7 +556,8 @@
       <WppEnabled>true</WppEnabled>
     </ClCompile>
     <Inf>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
+      <CatalogFileName>synccom.cat</CatalogFileName>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|x64'">
@@ -566,7 +567,8 @@
       <WppEnabled>true</WppEnabled>
     </ClCompile>
     <Inf>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
+      <CatalogFileName>synccom.cat</CatalogFileName>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
@@ -577,7 +579,8 @@
       <WppMinimalRebuildFromTracking>true</WppMinimalRebuildFromTracking>
     </ClCompile>
     <Inf>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
+      <CatalogFileName>synccom.cat</CatalogFileName>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">
@@ -587,7 +590,8 @@
       <WppEnabled>true</WppEnabled>
     </ClCompile>
     <Inf>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
+      <CatalogFileName>synccom.cat</CatalogFileName>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|x64'">
@@ -597,7 +601,8 @@
       <WppEnabled>true</WppEnabled>
     </ClCompile>
     <Inf>
-      <TimeStamp>1.1.0</TimeStamp>
+      <TimeStamp>1.1.1</TimeStamp>
+      <CatalogFileName>synccom.cat</CatalogFileName>
     </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|Win32'">
@@ -605,36 +610,60 @@
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|Win32'">
     <ClCompile>
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|Win32'">
     <ClCompile>
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|Win32'">
     <ClCompile>
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|Win32'">
     <ClCompile>
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'">
     <ClCompile>
       <ExceptionHandling>
       </ExceptionHandling>
     </ClCompile>
+    <Inf>
+      <CatalogFileName>synccom.cat</CatalogFileName>
+      <TimeStamp>1.1.1</TimeStamp>
+    </Inf>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ResourceCompile Include="synccom.rc" />
