--- a/driver/synccom.vcxproj
+++ b/driver/synccom.vcxproj
@@ -146,7 +146,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup>
-    <OutDir>$(IntDir)</OutDir>
+    <OutDir>$(ConfigurationName)\$(Platform)\</OutDir>
   </PropertyGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
@@ -500,21 +500,27 @@
   </ItemDefinitionGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|x64'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
+    <IntDir>$(ConfigurationName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|Win32'">
     <ALLOW_DATE_TIME>1</ALLOW_DATE_TIME>
