--- a/driver/synccom.vcxproj.Filters
+++ b/driver/synccom.vcxproj.Filters
@@ -107,7 +107,7 @@
     <ClInclude Include="driver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\inc\synccom.h">
+    <ClInclude Include="..\lib\raw\synccom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="trace.h">
