--- a/examples/get-firmware/get-firmware.vcxproj
+++ b/examples/get-firmware/get-firmware.vcxproj
@@ -154,6 +154,9 @@
   <ItemGroup>
     <ClCompile Include="get-firmware.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\lib\raw\synccom.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
