--- a/tools/reprogram-firmware/reprogram-firmware.vcxproj
+++ b/tools/reprogram-firmware/reprogram-firmware.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="reprogram-firmware.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\inc\synccom.h" />
+    <ClInclude Include="..\..\lib\raw\synccom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
