--- a/examples/purge/purge.vcxproj
+++ b/examples/purge/purge.vcxproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <ClCompile Include="purge.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\lib\raw\synccom.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
