--- a/examples/rx-multiple/rx-multiple.vcxproj
+++ b/examples/rx-multiple/rx-multiple.vcxproj
@@ -83,6 +83,9 @@
   <ItemGroup>
     <ClCompile Include="rx-multiple.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\lib\raw\synccom.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
