--- a/examples/tx-modifiers/tx-modifiers.vcxproj
+++ b/examples/tx-modifiers/tx-modifiers.vcxproj
@@ -84,6 +84,9 @@
   <ItemGroup>
     <ClCompile Include="tx-modifiers.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\lib\raw\synccom.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
