--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
 tmp/
-src/objfre*
-src/objchk*
-src/classinstaller/objfre*
-src/classinstaller/objchk*
-src/buildfre*
-src/buildchk*
-src/classinstaller/buildfre*
-src/classinstaller/buildchk*
-redist/production/serial/
-redist/production/amd64/serial/
-redist/production/i386/serial/
 examples/*/Release/
 tools/*/Release/
 tools/*/Win10*/
 debugging/
 bin/
-htm/
-lib/c/docs
-lib/net/loop/*.exe
+driver/*.*
+!driver/*.c
+!driver/*.h
+!driver/*.inx
+!driver/*.inc
+!driver/*.rc
+!driver/*.vcxproj
+
+driver/classinstaller/*.*
+!driver/classinstaller/*.c
+!driver/classinstaller/*.h
+!driver/classinstaller/*.inx
+!driver/classinstaller/*.vcxproj
+!driver/classinstaller/*.def
+!driver/classinstaller/*.ico
+!driver/classinstaller/*.rc
 *.pdf
 *.obj
 *.lib
